--- a/assets/debian.conf
+++ b/assets/debian.conf
@@ -1,7 +1,7 @@
 # qemu config file
 
 [drive "disk0"]
-  file = "debian.qcow2"
+  file = "disk/debian.qcow2"
   if = "none"
   format = "qcow2"
   discard = "unmap"
@@ -29,11 +29,12 @@
   driver = "usb-tablet"
 
 [nic "Mgmt"]
-  type = "user"
-#  ifname = "Mgmt03"
+  type = "tap"
+  ifname = "tap0"
   model = "virtio-net-pci"
-#  script = "no"
-#  downscript = "no"
+  mac = "52:54:00:DF:EC:82"
+  script = "no"
+  downscript = "no"
 
 [rtc]
   base = "localtime"
@@ -45,17 +46,17 @@
 
 [machine]
   type = "q35"
-  accel = "hax"
+  accel = "kvm"
 
 [memory]
-  size = "10G"
+  size = "8G"
 
 [smp-opts]
-  cpus = "12"
+  cpus = "4"
 
 [name]
   guest = "Debian"
 
-#[spice]
-#  port = "5933"
-#  disable-ticketing = "on"
+# [spice]
+# port = "5933"
+# disable-ticketing = "on"
