--- a/assets/fw01.conf
+++ b/assets/fw01.conf
@@ -1,7 +1,7 @@
 # qemu config file
 
 [drive "disk0"]
-  file = "fw01.qcow2"
+  file = "disk/fw01.qcow2"
   if = "none"
   format = "qcow2"
   discard = "unmap"
@@ -30,7 +30,7 @@
 
 [nic "Mgmt"]
   type = "tap"
-  ifname = "Net01VM01"
+  ifname = "tap0"
   model = "virtio-net-pci"
   mac = "52:54:00:d9:05:57"
   script = "no"
@@ -46,10 +46,10 @@
 
 [machine]
   type = "q35"
-  accel = "whpx"
+  accel = "kvm"
 
 [memory]
-  size = "4G"
+  size = "8G"
 
 [smp-opts]
   cpus = "4"
