--- a/assets/fw01.cfg
+++ b/assets/fw01.cfg
@@ -1,7 +1,13 @@
 # qemu config file
 
+# install
+# qemu-system-x86_64 -nodefaults -cpu host -display spice-app,gl=on -boot d -no-reboot -readconfig file.cfg -cdrom file.iso -daemonize
+
+# boot
+# qemu-system-x86_64 -nodefaults -cpu host -display spice-app,gl=on -readconfig file.cfg -daemonize
+
 [drive "disk0"]
-  file = "disk/fw01.qcow2"
+  file = "fw01.qcow2"
   if = "none"
   format = "qcow2"
   discard = "unmap"
@@ -23,18 +29,34 @@
   driver = "nec-usb-xhci"
 
 [device "video"]
-  driver = "virtio-vga"
+  driver = "qxl-vga"
 
 [device "tablet"]
   driver = "usb-tablet"
 
-[nic "Mgmt"]
+[nic "mgmt"]
   type = "tap"
-  ifname = "tap0"
+  ifname = "mgmt1"
   model = "virtio-net-pci"
   mac = "52:54:00:d9:05:57"
   script = "no"
   downscript = "no"
+
+[nic "eth1"]
+  type = "tap"
+  ifname = "inet1"
+  model = "virtio-net-pci"
+  mac = "52:54:00:d9:05:58"
+  script = "no"
+  downscript = "no"
+
+[nic "eth2"]
+  type = "user"
+#  ifname = "tap2"
+  model = "virtio-net-pci"
+  mac = "52:54:00:d9:05:59"
+#  script = "no"
+#  downscript = "no"
 
 [rtc]
   base = "localtime"
@@ -49,14 +71,15 @@
   accel = "kvm"
 
 [memory]
-  size = "8G"
+  size = "4G"
 
 [smp-opts]
   cpus = "4"
 
 [name]
-  guest = "FW01"
+  guest = "fw01"
 
-#[spice]
-#  port = "5931"
-#  disable-ticketing = "on"
+[spice]
+  gl = "on"
+  port = "5931"
+  disable-ticketing = "on"
