--- a/template/winpc.ini
+++ b/template/winpc.ini
@@ -4,18 +4,15 @@
 # swtpm socket -d --tpm2 --tpmstate dir=/tmp --ctrl type=unixio,path=/tmp/ea8ac046-4cfa-11ef-b392-33dcc6ec6c97-tpm.sock
 
 # install
-# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_spinlocks=0x1fff,hv_vapic,hv_time -display gtk,gl=on -boot d -no-reboot -bios /usr/share/ovmf/OVMF.fd -readconfig winpc.ini -drive file=images/Win11_24H2_Spanish_x64.iso,media=cdrom,index=2 -drive file=images/virtio-win-0.1.271.iso,media=cdrom,index=3 -overcommit cpu-pm=on -daemonize
+# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_vapic,hv_vpindex,hv_runtime,hv_time,hv_synic,hv_stimer,hv_tlbflush,hv-ipi,hv_frequencies,hv-evmcs,hv-stimer-direct,hv-emsr-bitmap,hv_xmm_input,hv-tlbflush-ext,hv-tlbflush-direct -display spice-app,gl=on -boot d -no-reboot -bios /usr/share/ovmf/OVMF.fd -readconfig winpc.ini -drive file=images/Win11_24H2_Spanish_x64.iso,media=cdrom -drive file=images/virtio-win-0.1.271.iso,media=cdrom -overcommit cpu-pm=on -daemonize
 
 # install drivers
 # shift+f10
 # oobe\bypassnro
-# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_spinlocks=0x1fff,hv_vapic,hv_time -display gtk,gl=on -bios /usr/share/ovmf/OVMF.fd 3<>/dev/tap100 -readconfig winpc.ini -drive file=images/virtio-win-0.1.271.iso,media=cdrom,index=2 -overcommit cpu-pm=on -daemonize
+# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_vapic,hv_vpindex,hv_runtime,hv_time,hv_synic,hv_stimer,hv_tlbflush,hv-ipi,hv_frequencies,hv-evmcs,hv-stimer-direct,hv-emsr-bitmap,hv_xmm_input,hv-tlbflush-ext,hv-tlbflush-direct -display spice-app,gl=on -bios /usr/share/ovmf/OVMF.fd 3<>/dev/tap7 -readconfig winpc.ini -drive file=images/virtio-win-0.1.271.iso,media=cdrom,index=2 -overcommit cpu-pm=on -daemonize
 
 # boot
-# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_spinlocks=0x1fff,hv_vapic,hv_time -display none -bios /usr/share/ovmf/OVMF.fd 3<>/dev/tap100 -readconfig winpc.ini -overcommit cpu-pm=on -daemonize
-
-# socat
-# socat stdio,echo=0,icanon=0 unix-connect:/tmp/ea8ac046-4cfa-11ef-b392-33dcc6ec6c97-mon.sock
+# qemu-system-x86_64 -nodefaults -cpu host,hv_relaxed,hv_vapic,hv_vpindex,hv_runtime,hv_time,hv_synic,hv_stimer,hv_tlbflush,hv-ipi,hv_frequencies,hv-evmcs,hv-stimer-direct,hv-emsr-bitmap,hv_xmm_input,hv-tlbflush-ext,hv-tlbflush-direct -display spice-app,gl=on -bios /usr/share/ovmf/OVMF.fd 3<>/dev/tap7 -readconfig winpc.ini -overcommit cpu-pm=on -daemonize
 
 [object]
   qom-type = "iothread"
@@ -39,19 +36,16 @@
   cache = "none"
 
 [device "video"]
-  driver = "virtio-vga"
-
-[device "usb"]
-  driver = "nec-usb-xhci"
+  driver = "qxl-vga"
 
 [device "keyboard"]
-  driver = "virtio-keyboard-pci"
+  driver = "virtio-keyboard"
 
 [device "mouse"]
-  driver = "virtio-mouse-pci"
+  driver = "virtio-mouse"
 
 [device "tablet"]
-  driver = "virtio-tablet-pci"
+  driver = "virtio-tablet"
 
 [device "tpm"]
   driver = "tpm-tis"
@@ -67,32 +61,21 @@
   id = "tpm0"
   chardev = "chrtpm"
 
-[chardev "chrmon"]
-  backend = "socket"
-  id = "chrmon"
-  path = "/tmp/ea8ac046-4cfa-11ef-b392-33dcc6ec6c97-mon.sock"
-  server = "on"
-  wait = "off"
-  nodelay = "on"
+[chardev "compat_monitor0"]
+  backend = "vc"
 
 [mon "mon0"]
-  chardev = "chrmon"
   mode = "readline"
+  chardev = "compat_monitor0"
 
 [nic "inet"]
   type = "user"
   model = "virtio-net-pci"
-
-[nic "mgmt"]
-  type = "tap"
-  ifname = "tap0"
-  model = "virtio-net-pci"
-  script = "no"
-  downscript = "no"
+  ipv6 = "off"
 
 [rtc]
   base = "localtime"
-  clock = "vm"
+  clock = "host"
 
 [machine]
   type = "q35"
@@ -103,7 +86,7 @@
   size = "4G"
 
 [smp-opts]
-  cpus = "4"
+  cpus = "2"
 
 [name]
-  guest = "winpc"
+  guest = "WINPC"
