--- a/template/iosxrv.ini
+++ b/template/iosxrv.ini
@@ -1,46 +1,55 @@
 # qemu config file
 
 # boot
-# qemu-system-x86_64 -nodefaults -cpu host -display none -readconfig iosxrv.cfg -daemonize
+# qemu-system-x86_64 -nodefaults -cpu host -display none -readconfig iosxrv.ini -daemonize
 
-[drive "disk1"]
-  file = "iosxrv-k9-demo-6.0.1.qcow2"
+[drive]
+  file = "iosxrv.qcow2"
+  id = "drive0"
   if = "ide"
   media = "disk"
   format = "qcow2"
 
-[chardev "pty0"]
+[chardev]
   backend = "pty"
-  id = "char0"
+  id = "pty0"
   mux = "on"
   nodelay = "on"
   server = "on"
   wait = "off"
 
-[device "ser0"]
+[device]
   driver = "isa-serial"
-  chardev = "char0"
+  id = "ser0"
+  chardev = "pty0"
 
-[mon "mon0"]
+[mon]
   mode = "readline"
-  chardev = "char0"
+  id = "mon0"
+  chardev = "pty0"
 
-[nic "Mg0"]
+[nic]
+  id = "Mg0"
   type = "tap"
   ifname = "tap0"
   model = "e1000"
   script = "no"
   downscript = "no"
 
-[nic "Gi0"]
+[nic]
+  id = "Gi0"
+  type = "socket"
+  model = "e1000"
+  mac = "52:54:00:12:34:56"
+  mcast = "230.0.0.1:1234"
+
+[nic]
+  id = "Gi1"
   type = "user"
   model = "e1000"
 
-[nic "Gi1"]
-  type = "user"
-  model = "e1000"
-
-[nic "Gi2"]
+[nic]
+  id = "Gi2"
   type = "user"
   model = "e1000"
 
