update: winpc.ini

--- a/winpc/winpc.ini
+++ b/winpc/winpc.ini
@@ -51,6 +51,7 @@
 
 [device "video"]
   driver = "qxl-vga"
+  max_outputs = "2"
 
 [device "keyboard"]
   driver = "virtio-keyboard"
@@ -60,6 +61,21 @@
 
 [device "tablet"]
   driver = "virtio-tablet"
+
+[device "virtio-serial"]
+  driver = "virtio-serial-pci"
+
+[device]
+  driver = "virtserialport"
+  chardev = "spicechannel0"
+  name = "com.redhat.spice.0"
+
+[chardev]
+  backend = "spicevmc"
+  id = "spicechannel0"
+  name = "vdagent"
+#  clipboard = "on"
+#  mouse = "off"
 
 [device "tpm"]
   driver = "tpm-tis"
