--- a/winpc/winpc.ini
+++ b/winpc/winpc.ini
@@ -51,7 +51,7 @@
 
 [device "video"]
   driver = "qxl-vga"
-  max_outputs = "2"
+  max_outputs = "1"
 
 [device "keyboard"]
   driver = "virtio-keyboard"
@@ -63,7 +63,9 @@
   driver = "virtio-tablet"
 
 [device "virtio-serial"]
-  driver = "virtio-serial-pci"
+  driver = "virtio-serial"
+  packed = "on"
+  ioeventfd = "on"
 
 [device]
   driver = "virtserialport"
